# web_hello_world

./: Dockerfile  Dockerfile.nginx  alembic.ini  docker-compose.yml  main.py  nginx.conf  prometheus.yml  pyproject.toml
docker/: app.sh
web/: app.py  database.py  exceptions.py  settings.py
web/admin/: auth.py  views.py
web/auth/: scheme.py
web/courses/: dao.py  models.py  router.py  schemas.py
web/dao/: base.py
web/images/: publish.py  router.py
web/migrations/: env.py
web/migrations/versions/: 21801922186f_added_relation_users_and_courses.py  35bafbac996b_added_password.py  67f1b0d6021e_create_users_table.py  6e6131d9928e_added_password.py  8d684fd88857_changed_date_registration_nullable.py  92eee96a83f7_changed_date_registration.py  aa772996072f_added_courses.py  acbf3a7fd501_removed_login.py  bde614754c81_removed_date_reg.py  c577083b19c6_added_time_created.py  d28d24568dd6_added_phone_to_users.py  dbbcdc9b345c_added_relation_users_and_courses.py  e7f181a11334_create_users_table.py  ed86370fd195_create_users_table.py
web/pages/: router.py
web/prometheus/: router.py
web/templates/: base.html
web/templates/auth/: login.html
web/templates/courses/: courses.html
web/users/: auth.py  dao.py  dependencies.py  models.py  router.py  schemas.py
